default_old/objects/Merchandise__c/fields/Catagories__c.field-meta.xml
<CustomField>
    <fullName>Catagories__c</fullName>
    <label>Catagories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>islaptop__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Charger</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>