default_old/objects/Merchandise__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Merchandise</relationshipLabel>
    <relationshipName>Merchandise</relationshipName>
    <type>Lookup</type>
</CustomField>