default_old/objects/Merchandise__c/fields/testloc__c.field-meta.xml
<CustomField>
    <fullName>testloc__c</fullName>
    <label>testloc</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>