default_old/objects/Merchandise__c/fields/Value1__c.field-meta.xml
<CustomField>
    <fullName>Value1__c</fullName>
    <label>Value1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>