default_old/objects/Merchandise__c/fields/Value2__c.field-meta.xml
<CustomField>
    <fullName>Value2__c</fullName>
    <label>Value2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>