default_old/objects/Merchandise__c/validationRules/Price_upper_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_upper_limit</fullName>
    <active>true</active>
    <description>price cant be more than 1000</description>
    <errorConditionFormula>Price__c &gt; 1000</errorConditionFormula>
    <errorMessage>price cant be more than 1000</errorMessage>
</ValidationRule>